--- a/dp_success.html
+++ b/dp_success.html
@@ -14,53 +14,95 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            max-height: 100vh;
             box-sizing: border-box;
-            overflow: hidden; /* Prevent scrollbars */
+            overflow: hidden;
         }
 
         .chart-container {
             background: transparent;
             border-radius: 0;
             box-shadow: none;
-            padding: 10px 10px 10px 160px; /* Reduced padding, less left padding */
-            max-width: 900px;
+            padding: 20px 40px 20px 80px; /* Increased left padding to accommodate y-axis */
+            max-width: 100%;
             width: 100%;
             height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            box-sizing: border-box;
         }
 
         .chart-title {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: bold;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             color: #2c3e50;
             opacity: 0;
-            animation: fadeIn 0.25s ease-in-out 0.125s forwards;
+            animation: fadeIn 1s ease-in-out 0.5s forwards;
+        }
+
+        .chart-wrapper {
+            position: relative;
+            width: 100%;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .y-axis-label {
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%) rotate(-90deg);
+            transform-origin: center;
+            font-size: 18px;
+            font-weight: 600;
+            color: #2c3e50;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out 1.2s forwards;
+            white-space: nowrap;
+        }
+
+        .y-axis {
+            position: absolute;
+            left: 50px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: flex-end;
+            font-size: 14px;
+            color: #7f8c8d;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out 0.8s forwards;
+            padding: 10px 10px 10px 0;
+            box-sizing: border-box;
         }
 
         .chart {
             display: flex;
             align-items: end;
             justify-content: center;
-            height: 800px;
-            margin: 40px 0;
+            height: 100%;
+            margin-left: 80px;
             position: relative;
+            flex: 1;
         }
 
         .bar-container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 0 40px;
+            margin: 0 30px;
             position: relative;
+            height: 100%;
+            justify-content: flex-end;
         }
 
         .bar {
-            width: 240px;
+            width: 80px;
             border-radius: 8px 8px 0 0;
             position: relative;
             transition: all 0.3s ease;
@@ -75,105 +117,77 @@
         .bar-stock {
             background: linear-gradient(180deg, #e74c3c 0%, #c0392b 100%);
             height: 0;
-            animation: growBar1 0.5s ease-in-out 0.0625s forwards; /* 4x faster */
+            animation: growBar1 2s ease-in-out 1s forwards;
         }
 
         .bar-dexwrist {
             background: linear-gradient(180deg, #3498db 0%, #2980b9 100%);
             height: 0;
-            animation: growBar2 0.5s ease-in-out 0.375s forwards; /* 4x faster */
+            animation: growBar2 2s ease-in-out 1.5s forwards;
         }
 
         .bar-label {
-            margin-top: 20px;
-            font-size: 18px;
+            margin-top: 15px;
+            font-size: 14px;
             font-weight: 600;
             text-align: center;
             color: #2c3e50;
-            max-width: 200px;
+            max-width: 120px;
             line-height: 1.3;
             opacity: 0;
-            animation: fadeIn 0.0625s ease-in-out 0.5s forwards; /* 4x faster */
+            animation: fadeIn 1s ease-in-out 2s forwards;
         }
 
         .percentage-label {
             position: absolute;
-            top: -40px;
+            top: -35px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 22px;
+            font-size: 18px;
             font-weight: bold;
             color: #2c3e50;
             background: white;
-            padding: 8px 12px;
-            border-radius: 20px;
+            padding: 6px 10px;
+            border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             opacity: 0;
         }
 
         .percentage-stock {
-            animation: fadeIn 0.0625s ease-in-out 0.625s forwards; /* 4x faster */
+            animation: fadeIn 1s ease-in-out 2.5s forwards;
         }
 
         .percentage-dexwrist {
-            animation: fadeIn 0.0625s ease-in-out 0.75s forwards; /* 4x faster */
+            animation: fadeIn 1s ease-in-out 3s forwards;
         }
 
         .error-bar {
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            width: 3px;
+            width: 2px;
             background: #2c3e50;
             opacity: 0;
-            animation: fadeIn 0.2s ease-in-out 0.8s forwards; /* 4x faster */
+            animation: fadeIn 0.8s ease-in-out 3.2s forwards;
         }
 
         .error-cap {
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            width: 20px;
-            height: 3px;
+            width: 16px;
+            height: 2px;
             background: #2c3e50;
         }
 
         .error-bar-stock {
-            top: -25.3px;
-            height: 50.6px; /* ±12.65% error */
+            top: -20px;
+            height: 40px;
         }
 
         .error-bar-dexwrist {
-            top: -25.3px;
-            height: 50.6px; /* ±12.65% error */
-        }
-
-        .y-axis {
-            position: absolute;
-            left: -60px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: end;
-            font-size: 16px;
-            color: #7f8c8d;
-            opacity: 0;
-            animation: fadeIn 0.0625s ease-in-out 0.2s forwards; /* 4x faster */
-        }
-
-        .y-axis-label {
-            position: absolute;
-            left: -140px;
-            top: 50%;
-            transform: translateY(-50%) rotate(-90deg);
-            transform-origin: center;
-            font-size: 20px;
-            font-weight: 600;
-            color: #2c3e50;
-            opacity: 0;
-            animation: fadeIn 0.0625s ease-in-out 0.3s forwards; /* 4x faster */
-            white-space: nowrap;
+            top: -20px;
+            height: 40px;
         }
 
         .grid-lines {
@@ -181,11 +195,12 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
+            left: 80px;
         }
 
         .grid-line {
             position: absolute;
-            width: 100%;
+            width: calc(100% - 80px);
             height: 1px;
             background: linear-gradient(90deg, transparent 0%, #bdc3c7 20%, #bdc3c7 80%, transparent 100%);
             opacity: 0.3;
@@ -193,12 +208,12 @@
 
         @keyframes growBar1 {
             from { height: 0; }
-            to { height: 160px; } /* 40% of 400px */
+            to { height: 120px; }
         }
 
         @keyframes growBar2 {
             from { height: 0; }
-            to { height: 240px; } /* 60% of 400px */
+            to { height: 180px; }
         }
 
         @keyframes fadeIn {
@@ -206,57 +221,63 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
-        @keyframes bounceIn {
-            0% { opacity: 0; transform: scale(0.3); }
-            50% { transform: scale(1.1); }
-            70% { transform: scale(0.9); }
-            100% { opacity: 1; transform: scale(1); }
-        }
-
-        .replay-button {
-            display: block;
-            margin: 30px auto 0;
-            padding: 12px 30px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            border: none;
-            border-radius: 25px;
-            font-size: 16px;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
-        }
-
-        .replay-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
-        }
-
         @media (max-width: 768px) {
             .chart-container {
-                padding: 20px;
-                margin: 10px;
+                padding: 15px 20px 15px 60px;
             }
 
             .chart-title {
-                font-size: 22px;
+                font-size: 18px;
+                margin-bottom: 15px;
             }
 
             .bar {
-                width: 80px;
+                width: 60px;
             }
 
             .bar-container {
-                margin: 0 20px;
+                margin: 0 15px;
             }
 
             .bar-label {
-                font-size: 14px;
+                font-size: 12px;
             }
 
             .percentage-label {
-                font-size: 18px;
+                font-size: 14px;
+                padding: 4px 8px;
+            }
+
+            .y-axis-label {
+                font-size: 14px;
+                left: 5px;
+            }
+
+            .y-axis {
+                left: 35px;
+                font-size: 12px;
+            }
+
+            .chart {
+                margin-left: 60px;
+            }
+
+            .grid-lines {
+                left: 60px;
+            }
+
+            .grid-line {
+                width: calc(100% - 60px);
+            }
+
+            @keyframes growBar1 {
+                from { height: 0; }
+                to { height: 80px; }
+            }
+
+            @keyframes growBar2 {
+                from { height: 0; }
+                to { height: 120px; }
             }
         }
     </style>
@@ -265,7 +286,7 @@
     <div class="chart-container">
         <h1 class="chart-title">Diffusion Policy Success Rate Comparison</h1>
 
-        <div class="chart">
+        <div class="chart-wrapper">
             <div class="y-axis-label">SR (%)</div>
             <div class="y-axis">
                 <span>100</span>
@@ -285,64 +306,61 @@
                 <div class="grid-line" style="bottom: 100%"></div>
             </div>
 
-            <div class="bar-container">
-                <div class="bar bar-stock">
-                    <div class="percentage-label percentage-stock">40%</div>
-                    <div class="error-bar error-bar-stock">
-                        <div class="error-cap" style="top: -1.5px;"></div>
-                        <div class="error-cap" style="bottom: -1.5px;"></div>
+            <div class="chart">
+                <div class="bar-container">
+                    <div class="bar bar-stock">
+                        <div class="percentage-label percentage-stock">40%</div>
+                        <div class="error-bar error-bar-stock">
+                            <div class="error-cap" style="top: -1px;"></div>
+                            <div class="error-cap" style="bottom: -1px;"></div>
+                        </div>
                     </div>
+                    <div class="bar-label">AgileX + Default Wrist</div>
                 </div>
-                <div class="bar-label">AgileX + Default Wrist</div>
-            </div>
 
-            <div class="bar-container">
-                <div class="bar bar-dexwrist">
-                    <div class="percentage-label percentage-dexwrist">60%</div>
-                    <div class="error-bar error-bar-dexwrist">
-                        <div class="error-cap" style="top: -1.5px;"></div>
-                        <div class="error-cap" style="bottom: -1.5px;"></div>
+                <div class="bar-container">
+                    <div class="bar bar-dexwrist">
+                        <div class="percentage-label percentage-dexwrist">60%</div>
+                        <div class="error-bar error-bar-dexwrist">
+                            <div class="error-cap" style="top: -1px;"></div>
+                            <div class="error-cap" style="bottom: -1px;"></div>
+                        </div>
                     </div>
+                    <div class="bar-label">AgileX + DexWrist (Ours)</div>
                 </div>
-                <div class="bar-label">AgileX + DexWrist (Ours)</div>
             </div>
         </div>
-
-        <!-- <button class="replay-button" onclick="replayAnimation()">Replay Animation</button> -->
     </div>
 
     <script>
         function replayAnimation() {
-            // Remove all animations
             const elements = document.querySelectorAll('.chart-title, .bar-stock, .bar-dexwrist, .bar-label, .percentage-label, .y-axis, .y-axis-label, .error-bar');
 
             elements.forEach(el => {
                 el.style.animation = 'none';
-                el.offsetHeight; // Trigger reflow
+                el.offsetHeight;
             });
 
-            // Restart animations
             setTimeout(() => {
-                document.querySelector('.chart-title').style.animation = 'fadeIn 0.0625s ease-in-out 0.03125s forwards';
-                document.querySelector('.y-axis').style.animation = 'fadeIn 0.0625s ease-in-out 0.0625s forwards';
-                document.querySelector('.y-axis-label').style.animation = 'fadeIn 0.0625s ease-in-out 0.075s forwards';
-                document.querySelector('.bar-stock').style.animation = 'growBar1 0.005s ease-in-out 0.005s forwards';
-                document.querySelector('.bar-dexwrist').style.animation = 'growBar2 0.005s ease-in-out 0.005s forwards';
+                document.querySelector('.chart-title').style.animation = 'fadeIn 1s ease-in-out 0.5s forwards';
+                document.querySelector('.y-axis').style.animation = 'fadeIn 1s ease-in-out 0.8s forwards';
+                document.querySelector('.y-axis-label').style.animation = 'fadeIn 1s ease-in-out 1.2s forwards';
+                document.querySelector('.bar-stock').style.animation = 'growBar1 2s ease-in-out 1s forwards';
+                document.querySelector('.bar-dexwrist').style.animation = 'growBar2 2s ease-in-out 1.5s forwards';
 
                 document.querySelectorAll('.bar-label').forEach(label => {
-                    label.style.animation = 'fadeIn 0.0625s ease-in-out 0.0625s forwards';
+                    label.style.animation = 'fadeIn 1s ease-in-out 2s forwards';
                 });
 
-                document.querySelector('.percentage-stock').style.animation = 'fadeIn 0.0625s ease-in-out 0.125s forwards';
-                document.querySelector('.percentage-dexwrist').style.animation = 'fadeIn 0.0625s ease-in-out 0.1s forwards';
+                document.querySelector('.percentage-stock').style.animation = 'fadeIn 1s ease-in-out 2.5s forwards';
+                document.querySelector('.percentage-dexwrist').style.animation = 'fadeIn 1s ease-in-out 3s forwards';
 
                 document.querySelectorAll('.error-bar').forEach(errorBar => {
-                    errorBar.style.animation = 'fadeIn 0.05s ease-in-out 0.25s forwards';
+                    errorBar.style.animation = 'fadeIn 0.8s ease-in-out 3.2s forwards';
                 });
             }, 50);
         }
 
-        // Add some interactivity for better presentation
         document.querySelectorAll('.bar').forEach(bar => {
             bar.addEventListener('mouseenter', function() {
                 this.style.filter = 'brightness(1.1)';
