--- a/dp_success.html
+++ b/dp_success.html
@@ -14,95 +14,53 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            max-height: 100vh;
             box-sizing: border-box;
-            overflow: hidden;
+            overflow: hidden; /* Prevent scrollbars */
         }
 
         .chart-container {
             background: transparent;
             border-radius: 0;
             box-shadow: none;
-            padding: 20px 40px 20px 80px; /* Increased left padding to accommodate y-axis */
-            max-width: 100%;
+            padding: 10px 10px 10px 160px; /* Reduced padding, less left padding */
+            max-width: 900px;
             width: 100%;
             height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            box-sizing: border-box;
         }
 
         .chart-title {
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
             color: #2c3e50;
             opacity: 0;
             animation: fadeIn 1s ease-in-out 0.5s forwards;
-        }
-
-        .chart-wrapper {
-            position: relative;
-            width: 100%;
-            height: 300px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .y-axis-label {
-            position: absolute;
-            left: 10px;
-            top: 50%;
-            transform: translateY(-50%) rotate(-90deg);
-            transform-origin: center;
-            font-size: 18px;
-            font-weight: 600;
-            color: #2c3e50;
-            opacity: 0;
-            animation: fadeIn 1s ease-in-out 1.2s forwards;
-            white-space: nowrap;
-        }
-
-        .y-axis {
-            position: absolute;
-            left: 50px;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-            align-items: flex-end;
-            font-size: 14px;
-            color: #7f8c8d;
-            opacity: 0;
-            animation: fadeIn 1s ease-in-out 0.8s forwards;
-            padding: 10px 10px 10px 0;
-            box-sizing: border-box;
         }
 
         .chart {
             display: flex;
             align-items: end;
             justify-content: center;
-            height: 100%;
-            margin-left: 80px;
+            height: 600px;
+            margin: 40px 0;
             position: relative;
-            flex: 1;
         }
 
         .bar-container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin: 0 30px;
+            margin: 0 40px;
             position: relative;
-            height: 100%;
-            justify-content: flex-end;
         }
 
         .bar {
-            width: 80px;
+            width: 60px;
             border-radius: 8px 8px 0 0;
             position: relative;
             transition: all 0.3s ease;
@@ -127,12 +85,12 @@
         }
 
         .bar-label {
-            margin-top: 15px;
-            font-size: 14px;
+            margin-top: 20px;
+            font-size: 18px;
             font-weight: 600;
             text-align: center;
             color: #2c3e50;
-            max-width: 120px;
+            max-width: 120;
             line-height: 1.3;
             opacity: 0;
             animation: fadeIn 1s ease-in-out 2s forwards;
@@ -140,15 +98,15 @@
 
         .percentage-label {
             position: absolute;
-            top: -35px;
+            top: -40px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 18px;
+            font-size: 22px;
             font-weight: bold;
             color: #2c3e50;
             background: white;
-            padding: 6px 10px;
-            border-radius: 15px;
+            padding: 8px 12px;
+            border-radius: 20px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.1);
             opacity: 0;
         }
@@ -165,7 +123,7 @@
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            width: 2px;
+            width: 3px;
             background: #2c3e50;
             opacity: 0;
             animation: fadeIn 0.8s ease-in-out 3.2s forwards;
@@ -175,19 +133,47 @@
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            width: 16px;
-            height: 2px;
+            width: 20px;
+            height: 3px;
             background: #2c3e50;
         }
 
         .error-bar-stock {
-            top: -20px;
-            height: 40px;
+            top: -25.3px;
+            height: 50.6px; /* ±12.65% error */
         }
 
         .error-bar-dexwrist {
-            top: -20px;
-            height: 40px;
+            top: -25.3px;
+            height: 50.6px; /* ±12.65% error */
+        }
+
+        .y-axis {
+            position: absolute;
+            left: -60px;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: end;
+            font-size: 16px;
+            color: #7f8c8d;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out 0.8s forwards;
+        }
+
+        .y-axis-label {
+            position: absolute;
+            left: -140px;
+            top: 50%;
+            transform: translateY(-50%) rotate(-90deg);
+            transform-origin: center;
+            font-size: 20px;
+            font-weight: 600;
+            color: #2c3e50;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out 1.2s forwards;
+            white-space: nowrap;
         }
 
         .grid-lines {
@@ -195,12 +181,11 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            left: 80px;
         }
 
         .grid-line {
             position: absolute;
-            width: calc(100% - 80px);
+            width: 100%;
             height: 1px;
             background: linear-gradient(90deg, transparent 0%, #bdc3c7 20%, #bdc3c7 80%, transparent 100%);
             opacity: 0.3;
@@ -208,12 +193,12 @@
 
         @keyframes growBar1 {
             from { height: 0; }
-            to { height: 120px; }
+            to { height: 80px; } /* 40% of 400px */
         }
 
         @keyframes growBar2 {
             from { height: 0; }
-            to { height: 180px; }
+            to { height: 120px; } /* 60% of 400px */
         }
 
         @keyframes fadeIn {
@@ -221,14 +206,41 @@
             to { opacity: 1; transform: translateY(0); }
         }
 
+        @keyframes bounceIn {
+            0% { opacity: 0; transform: scale(0.3); }
+            50% { transform: scale(1.1); }
+            70% { transform: scale(0.9); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+
+        .replay-button {
+            display: block;
+            margin: 30px auto 0;
+            padding: 12px 30px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            border-radius: 25px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.3);
+        }
+
+        .replay-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.4);
+        }
+
         @media (max-width: 768px) {
             .chart-container {
-                padding: 15px 20px 15px 60px;
+                padding: 20px;
+                margin: 10px;
             }
 
             .chart-title {
-                font-size: 18px;
-                margin-bottom: 15px;
+                font-size: 22px;
             }
 
             .bar {
@@ -236,57 +248,24 @@
             }
 
             .bar-container {
-                margin: 0 15px;
+                margin: 0 20px;
             }
 
             .bar-label {
-                font-size: 12px;
+                font-size: 14px;
             }
 
             .percentage-label {
-                font-size: 14px;
-                padding: 4px 8px;
-            }
-
-            .y-axis-label {
-                font-size: 14px;
-                left: 5px;
-            }
-
-            .y-axis {
-                left: 35px;
-                font-size: 12px;
-            }
-
-            .chart {
-                margin-left: 60px;
-            }
-
-            .grid-lines {
-                left: 60px;
-            }
-
-            .grid-line {
-                width: calc(100% - 60px);
-            }
-
-            @keyframes growBar1 {
-                from { height: 0; }
-                to { height: 80px; }
-            }
-
-            @keyframes growBar2 {
-                from { height: 0; }
-                to { height: 120px; }
+                font-size: 18px;
             }
         }
     </style>
 </head>
 <body>
     <div class="chart-container">
-        <h1 class="chart-title">Diffusion Policy Success Rate Comparison</h1>
+        <!-- <h1 class="chart-title">Diffusion Policy Success Rates</h1> -->
 
-        <div class="chart-wrapper">
+        <div class="chart">
             <div class="y-axis-label">SR (%)</div>
             <div class="y-axis">
                 <span>100</span>
@@ -306,41 +285,43 @@
                 <div class="grid-line" style="bottom: 100%"></div>
             </div>
 
-            <div class="chart">
-                <div class="bar-container">
-                    <div class="bar bar-stock">
-                        <div class="percentage-label percentage-stock">40%</div>
-                        <div class="error-bar error-bar-stock">
-                            <div class="error-cap" style="top: -1px;"></div>
-                            <div class="error-cap" style="bottom: -1px;"></div>
-                        </div>
+            <div class="bar-container">
+                <div class="bar bar-stock">
+                    <div class="percentage-label percentage-stock">40%</div>
+                    <div class="error-bar error-bar-stock">
+                        <div class="error-cap" style="top: -1.5px;"></div>
+                        <div class="error-cap" style="bottom: -1.5px;"></div>
                     </div>
-                    <div class="bar-label">AgileX + Default Wrist</div>
                 </div>
+                <div class="bar-label">AgileX + Default Wrist</div>
+            </div>
 
-                <div class="bar-container">
-                    <div class="bar bar-dexwrist">
-                        <div class="percentage-label percentage-dexwrist">60%</div>
-                        <div class="error-bar error-bar-dexwrist">
-                            <div class="error-cap" style="top: -1px;"></div>
-                            <div class="error-cap" style="bottom: -1px;"></div>
-                        </div>
+            <div class="bar-container">
+                <div class="bar bar-dexwrist">
+                    <div class="percentage-label percentage-dexwrist">60%</div>
+                    <div class="error-bar error-bar-dexwrist">
+                        <div class="error-cap" style="top: -1.5px;"></div>
+                        <div class="error-cap" style="bottom: -1.5px;"></div>
                     </div>
-                    <div class="bar-label">AgileX + DexWrist (Ours)</div>
                 </div>
+                <div class="bar-label">AgileX + DexWrist (Ours)</div>
             </div>
         </div>
+
+        <!-- <button class="replay-button" onclick="replayAnimation()">Replay Animation</button> -->
     </div>
 
     <script>
         function replayAnimation() {
+            // Remove all animations
             const elements = document.querySelectorAll('.chart-title, .bar-stock, .bar-dexwrist, .bar-label, .percentage-label, .y-axis, .y-axis-label, .error-bar');
 
             elements.forEach(el => {
                 el.style.animation = 'none';
-                el.offsetHeight;
+                el.offsetHeight; // Trigger reflow
             });
 
+            // Restart animations
             setTimeout(() => {
                 document.querySelector('.chart-title').style.animation = 'fadeIn 1s ease-in-out 0.5s forwards';
                 document.querySelector('.y-axis').style.animation = 'fadeIn 1s ease-in-out 0.8s forwards';
@@ -361,6 +342,7 @@
             }, 50);
         }
 
+        // Add some interactivity for better presentation
         document.querySelectorAll('.bar').forEach(bar => {
             bar.addEventListener('mouseenter', function() {
                 this.style.filter = 'brightness(1.1)';
