--- a/index.html
+++ b/index.html
@@ -228,6 +228,12 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
   <!-- </div> -->
 </section>
 
+<!-- <section class="section hero is-light">
+  <h2 class="title is-4 has-text-centered heading-fixed">
+          More efficient and intuitive teleoperation in constrained, human-centric environments
+        </h2>
+</section> -->
+
 <!-- Paper abstract -->
 <!-- <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -252,8 +258,42 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
 
 
 <section class="hero is-small">
-  <div class="hero-body"></div>
-  <iframe src="dp_chart.html" width="100%" height="1100px" frameborder="0" scrolling="no"></iframe>
+    <div class="hero-body">
+            <!-- Section Title -->
+      <h2 class="title is-4 has-text-centered heading-fixed">
+        Reduced horizon for constrained manipulation leads to improved success rate for behavioral cloning policies
+      </h2>
+      <iframe src="dp_chart.html" width="100%" height="1100px" frameborder="0" scrolling="no"></iframe>
+    </div>
+  </div>
+ </section>
+
+ <section class="hero is-small is-light">
+    <div class="hero-body">
+            <!-- Section Title -->
+      <h2 class="title is-4 has-text-centered heading-fixed">
+        The human-like design of the wrist generates more natural behavior resulting in faster task completion
+      </h2>
+       <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
+          <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">Diffusion policies trained for the DexWrist were <b>3.24x</b>  faster at retrieving objects from a cluttered refrigerator than the AgileX + default wrist. </p>
+        </div>
+    </div>
+  </div>
+ </section>
+
+  <section class="hero is-small">
+    <div class="hero-body">
+            <!-- Section Title -->
+      <h2 class="title is-4 has-text-centered heading-fixed">
+        The human-like design of the wrist generates more natural behavior resulting in faster task completion
+      </h2>
+       <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
+          <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">Diffusion policies trained for the DexWrist were <b>3.24x</b>  faster at retrieving objects from a cluttered refrigerator than the AgileX + default wrist. </p>
+        </div>
+    </div>
+  </div>
  </section>
 
 
