--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <div class="hero-body">
             <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        The human-like design of the wrist generates more natural behavior resulting in faster task completion
+        The human-like design of the wrist generates natural behavior during teleoperation and resulting in faster task completion
       </h2>
        <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
           <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
@@ -284,14 +284,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
 
   <section class="hero is-small">
     <div class="hero-body">
-            <!-- Section Title -->
-      <h2 class="title is-4 has-text-centered heading-fixed">
-        The human-like design of the wrist generates more natural behavior resulting in faster task completion
-      </h2>
-       <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">Diffusion policies trained for the DexWrist were <b>3.24x</b>  faster at retrieving objects from a cluttered refrigerator than the AgileX + default wrist. </p>
-        </div>
+       <iframe src="unfinished_bom.html" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
     </div>
   </div>
  </section>
