RSS Website Ready

--- a/dp_chart.html
+++ b/dp_chart.html
@@ -212,8 +212,16 @@
     <div class="container">
         <div class="three-item-row">
             <!-- Chart -->
+            <div class="item">
+                <div class="chart-container">
+                   <iframe src="dp_success.html" style="width: 100%; height: 100%; border: 8px;"></iframe>
+                    <!-- <div class="chart-placeholder">Success Rate Chart</div> -->
+                </div>
+                <div class="chart-caption">Diffusion Policy Success Rate Comparison</div>
+            </div>
+        </div>
 
-
+        <div class="three-item-row">
             <!-- Left Video -->
             <div class="item">
                 <div class="video-container">
@@ -224,16 +232,6 @@
                     <div class="speed-indicator">1x</div>
                 </div>
                 <div class="video-caption">AgileX + Default Wrist</div>
-            </div>
-
-
-            <div class="item">
-                <div class="chart-container">
-                   <iframe src="dp_success.html" style="width: 100%; height: 100%; border: 8px;"></iframe>
-                    <!-- <div class="chart-placeholder">Success Rate Chart</div> -->
-                </div>
-
-                <div class="chart-caption">Diffusion Policy Success Rate Comparison</div>
             </div>
 
             <!-- Right Video -->
