--- a/unfinished_bom.html
+++ b/unfinished_bom.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bill of Materials - Coming Soon</title>
+    <title>CAD & Bill of Materials - Coming Soon</title>
     <style>
         body {
             margin: 0;
@@ -111,7 +111,8 @@
             </svg>
         </div>
 
-        <h1 class="title">Bill of Materials</h1>
+        <h1 class="title">DIY Tutorial</h1>
+        <h1 class="title">CAD & Bill of Materials</h1>
         <p class="subtitle"><span class="coming-soon">(Coming Soon)</span></p>
     </div>
 </body>
