--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <div class="hero-body">
       <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        More efficient and intuitive teleoperation in constrained, human-centric environments
+        Enables more efficient and intuitive teleoperation in constrained, human-centric environments
       </h2>
 
       <div style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap;">
@@ -261,7 +261,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <div class="hero-body">
             <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        Reduced horizon for constrained manipulation leads to improved success rate for behavioral cloning policies
+        Reduced horizon length leads to improved success rates of behavioral cloning policies for constrained manipulation tasks
       </h2>
       <iframe src="dp_chart.html" width="100%" height="1100px" frameborder="0" scrolling="no"></iframe>
     </div>
@@ -272,7 +272,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <div class="hero-body">
             <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        The human-like design of the wrist generates natural behavior during teleoperation and resulting in faster task completion
+        Human-like design of the wrist generates natural behavior during teleoperation resulting in faster task completion
       </h2>
        <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
           <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
@@ -281,6 +281,15 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     </div>
   </div>
  </section>
+
+  <section class="hero is-small">
+    <div class="hero-body">
+            <!-- Section Title -->
+      <h2 class="title is-4 has-text-centered heading-fixed">
+        The DexWrist is a highly dexterous wrist that can be used with any arm, end of arm tooling combination
+    </div>
+
+  </section>
 
 
   <iframe src="unfinished_bom.html" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
