--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <div class="hero-body">
             <!-- Section Title -->
       <h2 class="title is-4 has-text-centered heading-fixed">
-        Reduced horizon length leads to improved success rates of behavioral cloning policies for constrained manipulation tasks
+        Reduced horizon length in constrained environments leads to improved success rates for behavioral cloning policies
       </h2>
       <iframe src="dp_chart.html" width="100%" height="1100px" frameborder="0" scrolling="no"></iframe>
     </div>
