Fix side by side teleoperation figures.

--- a/index.html
+++ b/index.html
@@ -202,30 +202,35 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
   </div>
 </section>
 
-
 <section class="section hero is-light" style="width: 100%; margin: 0; padding: 0;">
-  <!-- <div class="container is-max-desktop"> -->
-    <div class="hero-body">
-      <!-- Section Title -->
-      <h2 class="title is-4 has-text-centered heading-fixed">
-        Enables more efficient and intuitive teleoperation in constrained, human-centric environments
-      </h2>
+  <div class="hero-body">
+    <!-- Section Title -->
+    <h2 class="title is-4 has-text-centered heading-fixed">
+      Enables more efficient and intuitive teleoperation in constrained, human-centric environments
+    </h2>
 
-      <div style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap;">
-        <!-- Left side - image with caption -->
-        <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 100%; max-width: 500px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.</p>
+    <div style="display: flex; align-items: flex-start; justify-content: space-between; gap: 40px; flex-wrap: wrap; max-width: 1200px; margin: 0 auto; padding: 0 20px;">
+      <!-- Left side - image with caption -->
+      <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center; min-width: 300px;">
+        <div style="width: 100%; max-width: 500px; display: flex; justify-content: center; align-items: center; min-height: 250px;">
+          <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 100%; height: 450px; object-fit: contain;">
         </div>
+        <p class="has-text-centered" style="margin-top: 0px; font-size: 16px; color: #666; max-width: 500px; line-height: 1.4;">
+          More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.
+        </p>
+      </div>
 
-        <!-- Right side - image with caption -->
-        <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
-          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 70%; max-width: 500px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">More intuitive: DexWrist's human-like kinematics and design collect shorter trajectories and more natural behavior for manipulation in constrained, human-centric environments.</p>
+      <!-- Right side - image with caption -->
+      <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center; min-width: 300px;">
+        <div style="width: 100%; max-width: 500px; display: flex; justify-content: center; align-items: center;">
+          <img src="static/images/transparent_teleop_figure.png" alt="Right Image" style="width: 100%; height: 450px; object-fit: contain;">
         </div>
+        <p class="has-text-centered" style="margin-top: 0px; font-size: 16px; color: #666; max-width: 500px; line-height: 1.4;">
+          More intuitive: DexWrist's human-like kinematics and design collect shorter trajectories and more natural behavior for manipulation in constrained, human-centric environments.
+        </p>
       </div>
     </div>
-  <!-- </div> -->
+  </div>
 </section>
 
 <!-- <section class="section hero is-light">
