--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
 <div class="content has-text-justified">
-  <h1 style="text-align: center;">Why DexWrist?</h1>
+  <h1 style="text-align: center;">Motivation</h1>
   <div style="font-size: 3em; color: #666; line-height: 1; margin-bottom: 10px;">"</div>
   <div style="margin-left: 40px; line-height: 1.2; margin-bottom: 10px;">
     <!-- Recent prosthetics investigations, however, have shown that increased dexterity in wrist prostheses may contribute more to manipulation capacity than a highly dexterous terminal device with limited wrist capability.<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=8624352" target="_blank" style="color: blue;"> [1] </a> -->
@@ -216,7 +216,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
           <img src="static/images/reset_fitted_background_is-light.png" alt="Left Image" style="width: 100%; height: 450px; object-fit: contain;">
         </div>
         <p class="has-text-centered" style="margin-top: 0px; font-size: 16px; color: #666; max-width: 500px; line-height: 1.4;">
-          More efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.
+          More data efficient: Fewer environment resets required and less overall human teleoperator time in constrained spaces.
         </p>
       </div>
 
@@ -281,23 +281,15 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
       </h2>
        <div style="flex: 1 1 45%; display: flex; flex-direction: column; align-items: center;">
           <img src="static/images/policy_speed.png" alt="Polcy speed" style="width: 100%; max-width: 500px; height: auto;">
-          <p class="has-text-centered" style="margin-top: 15px; font-size: 12px; color: #666;">Diffusion policies trained for the DexWrist were <b>3.24x</b>  faster at retrieving objects from a cluttered refrigerator than the AgileX + default wrist. </p>
+          <p class="has-text-centered" style="margin-top: 15px; font-size: 16px; color: #666;">Diffusion policies trained for the DexWrist were <b>3.24x</b>  faster at retrieving objects from a cluttered refrigerator than the AgileX + default wrist. </p>
         </div>
     </div>
   </div>
  </section>
 
-  <section class="hero is-small">
-    <div class="hero-body">
-            <!-- Section Title -->
-      <h2 class="title is-4 has-text-centered heading-fixed">
-        The DexWrist is a highly dexterous wrist that can be used with any arm, end of arm tooling combination
-    </div>
-
-  </section>
 
 
- <section class="section hero is-light">
+ <section class="section hero">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -315,13 +307,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
       </div>
     </div>
   </div>
-</section>
-
-
-
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
+  <div class="container">
       <!-- Paper video. -->
       <!-- <h2 class="title is-3">Video Presentation</h2> -->
       <div class="columns is-centered has-text-centered">
@@ -353,21 +339,29 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
         </div>
 
         <h2 class="explaintext">[1x Speed] Finally, DexWrist has a large workspace and fits on most commercial robotic arms (AgileX shown). This makes fast, dynamic tasks possible on any arm.</h2>
-
-
         </div>
       </div>
     </div>
-  </div>
+    <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKY6ytECnUhm9cvhBMHQg4BA9cfU0vOAlzGBlCn1N8VDJ8ZA/viewform?usp=sharing&ouid=100835751114693391084" target="_blank" style="background: #007bff; color: white; border: 2px solid #007bff; padding: 12px 24px; border-radius: 6px; font-size: 16px; font-weight: 600; text-decoration: none; display: inline-block; transition: all 0.3s ease; font-family: 'Google Sans', sans-serif;" onmouseover="this.style.background='#0056b3'; this.style.transform='translateY(-1px)'" onmouseout="this.style.background='#007bff'; this.style.transform='translateY(0)'"> Join Waitlist to Purchase a DexWrist!</a>
+    </div>
 </section>
 
 
 
-  <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeKY6ytECnUhm9cvhBMHQg4BA9cfU0vOAlzGBlCn1N8VDJ8ZA/viewform?usp=sharing&ouid=100835751114693391084" target="_blank" style="background: #007bff; color: white; border: 2px solid #007bff; padding: 12px 24px; border-radius: 6px; font-size: 16px; font-weight: 600; text-decoration: none; display: inline-block; transition: all 0.3s ease; font-family: 'Google Sans', sans-serif;" onmouseover="this.style.background='#0056b3'; this.style.transform='translateY(-1px)'" onmouseout="this.style.background='#007bff'; this.style.transform='translateY(0)'"> Join Waitlist to Purchase a DexWrist!</a>
-  </div></div>
+<!-- <section class="hero is-small is-light">
+  <div class="hero-body">
 
-  <iframe src="unfinished_bom.html" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
+  </div>
+</section> -->
+
+
+
+  <!-- <div style="text-align: center; margin-top: 20px; margin-bottom: 20px;">
+
+  </div></div> -->
+
+<iframe src="unfinished_bom.html" width="100%" height="400px" frameborder="0" scrolling="no"></iframe>
 
 
 
