Social media improvements

--- a/index.html
+++ b/index.html
@@ -16,22 +16,21 @@
   </style>
 
   <meta charset="utf-8">
-  <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
-  <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
+  <!-- Meta tags for social media banners, these should be filled in appropriately -->
+  <meta name="description" content="DexWrist: A Robotic Wrist for Constrained and Dynamic Manipulation. Learn about its innovative design and capabilities.">
+  <meta property="og:title" content="DexWrist: A Robotic Wrist for Dynamic Manipulation"/>
+  <meta property="og:description" content="Discover the DexWrist, a robotic wrist designed for constrained and dynamic manipulation tasks with human-like dexterity."/>
+  <meta property="og:url" content="https://dexwrist.csail.mit.edu"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  <meta property="og:image" content="static/images/lab_logo_final.ico" />
+  <meta property="og:image:width" content="600"/>
+  <meta property="og:image:height" content="600"/>
 
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
+  <meta name="twitter:title" content="DexWrist: A Robotic Wrist for Dynamic Manipulation">
+  <meta name="twitter:description" content="Explore the DexWrist, a robotic wrist enabling dynamic tasks with human-like dexterity.">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
+  <meta name="twitter:image" content="static/images/lab_logo_final.ico">
   <meta name="twitter:card" content="summary_large_image">
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
@@ -432,7 +431,7 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
       <iframe src="https://drive.google.com/file/d/1ofqW1u5Tn6R8qa2SEs_r3V4QvRsBEuId/preview" width="640" height="480" allow="autoplay"></iframe>
       </div>
     </div>
-  </section>
+  </div>
 <!--End paper poster -->
 
 
@@ -470,4 +469,5 @@ limited wrist capability. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?t
     <!-- End of Statcounter Code -->
 
   </body>
+  </html>
   </html>
