added arxiv link

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="publication-links">
                          <!-- Arxiv PDF link -->
                       <span class="link-block">
-                        <a href="https://drive.google.com/file/d/1AQPGCTJvBVWvyyMcHGUmbIGAIehOupeE/view?usp=sharing" target="_blank"
+                        <a href="https://arxiv.org/abs/2507.01008" target="_blank"
                         class="external-link button is-normal is-rounded is-dark">
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
